Containerized the thumbnail section. Fixed wrapping, height, and overflow issues on the thumbnail elements

--- a/css/_container-fluid.scss
+++ b/css/_container-fluid.scss
@@ -1,4 +1,4 @@
-.container-fluid{
+.container-fluid, .container{
     .rcgc-formcontainer {
         background-color:#cbdaef; 
         border-top: #0b1626 solid 40px; 
@@ -23,21 +23,21 @@
             display: flex;
             flex-direction: column;
             div.col-md-4 {
-                @media screen and (min-width: 768px) and (max-width: 1359px) {
+                @media screen and (max-width: $tablet - 1) {
+                    width: 90%;
+                }
+                @media screen and (min-width: $tablet)  and (max-width: $desktop - 1) {
                     width: 45%;
                 }
-                @media screen and (min-width: 1360px)  and (max-width: 1900px) {
+                @media screen and (min-width: $desktop) {
                     width: 33%;
-                }
-                @media screen and (min-width: 1901px) {
-                    width: 25%;
                 }
             }
             div.thumbnail{
                 position: relative;
                 padding: 0;
                 .caption{
-                    min-height: 33vh;
+                    margin-bottom: 85px;
                 }
                 img{
                     padding-top: 0;
@@ -50,7 +50,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    width: 100%;
+                    max-width: 100%;
                     p{
                         display: flex;
                         flex-wrap: wrap;
@@ -61,12 +61,12 @@
             }
         }
         &.dt-fdr {  
-            @media screen and (min-width: 768px) {
+            @media screen and (min-width: $tablet) {
                 flex-direction: row;
             }
         }
         &.dt-fw {
-            @media screen and (min-width: 768px) {
+            @media screen and (min-width: $tablet) {
                 flex-wrap: wrap;
             }
         }
@@ -78,19 +78,19 @@
         }
         div.thumnail {
             flex: 1;
-            @media screen and (min-width: 768px) {
+            @media screen and (min-width: $tablet) {
                 width: 25%;
                 min-height: 400px;
             }
-            @media screen and (max-width: 767px) {
+            @media screen and (max-width: $tablet - 1) {
                 width: 100%;
             }
         }
     }
 }
 
-@media screen and (min-width: 768px){
-    .container-fluid{
+@media screen and (min-width: $tablet){
+    .container-fluid, .container{
         div.row{
             &.flex{
                 display: flex;
@@ -100,7 +100,6 @@
                     div.thumbnail{
                         position: relative;
                         padding: 0;
-                        min-height: 700px;
                         img{
                             padding-top: 0;
                             border-top-left-radius: 4px;
